some small change
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@166 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalGel/vignettes/causal.bib
+++ b/pkg/causalGel/vignettes/causal.bib
@@ -9,6 +9,16 @@
   Number={4}
  } 
 
+@article{kitamura-otsu-evdokimov13,
+  NUMBER = {3},
+  AUTHOR = {Kitamura, Y. and Otsu, T. and Evdokimov, K.},
+  TITLE = {Robustness, Infinitesimal Neighborhoods, and Moment Restrictions},
+  JOURNAL = {Econometrica},
+  VOLUME = {81},
+  PAGES = {1185-1201},
+  YEAR = {2013}
+ }
+
 @article{garcia-renault-veredas06,
   AUTHOR={Garcia, R. and Renault, E. and Veredas, D.},
   TITLE={Estimation of Stable Distribution by Indirect Inference},
@@ -870,7 +880,7 @@ year = {1994},
 }
 
 
-  @Article{leifeld13,
+@Article{leifeld13,
     title = {{texreg}: Conversion of Statistical Model Output in {R} to {\LaTeX} and {HTML} Tables},
     author = {Philip Leifeld},
     journal = {Journal of Statistical Software},
@@ -880,3 +890,42 @@ year = {1994},
     pages = {1--24},
     url = {http://www.jstatsoft.org/v55/i08/},
   }
+
+@Manual{momentfit,
+    title = {momentfit: Methods of moments},
+    author = {Chauss\'e, P.},
+    year = {2020},
+    note = {R package version 0.1-0},
+    url = {https://r-forge.r-project.org/projects/gmm/},
+  }
+
+@article{lalonde86,
+  AUTHOR = {Lalonde, R.},
+  TITLE = {Evaluating the Econometric Evaluations of Training Programs},
+  JOURNAL = {American Economic Review},
+  VOLUME = {76},
+  PAGES = {604-620},
+  YEAR  = {1986}
+}
+
+@article{dehejia-wahba99,
+  NUMBER = {448},
+  AUTHOR = {Dehejia, R.H. and Wahba, S.},
+  TITLE = {Causal Effects in Nonexperimental Studies: Reevaluating the
+                  Evaluation of Training Programs},
+  JOURNAL = {Journal of the American Statistical Association},
+  VOLUME = {94},
+  YEAR = {1999}
+ }
+
+
+@article{dehejia-wahba02,
+  NUMBER = {1},
+  AUTHOR = {Dehejia, R.H. and Wahba, S.},
+  TITLE = {Propensity Score-Matching Methods For Nonexperimental
+                  Causal Studies},
+  JOURNAL = {Review of Economics and Statistics},
+  VOLUME = {84},
+  PAGES = {151-161},
+  YEAR = {2002}
+ }
