Added the option orthoBases to the causalGEL function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@179 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/causalGel/vignettes/causal.bib
+++ b/pkg/causalGel/vignettes/causal.bib
@@ -67,6 +67,14 @@ note = {In progress, Chapter 1 online at academic2.american.edu/$\sim$jpnolan}
     url = {http://www.stats.ox.ac.uk/pub/MASS4}
       }
 
+@Manual{pracma,
+    title = {pracma: Practical Numerical Math Functions},
+    author = {Hans W. Borchers},
+    year = {2019},
+    note = {R package version 2.2.9},
+    url = {https://CRAN.R-project.org/package=pracma},
+  }
+
 @book{hall05,
 author = {A. R. Hall},
 title = {Generalized Method of Moments (Advanced Texts in Econometrics)},
