added other causal methods to causaGel and fixed vignette of gmm
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@181 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/vignettes/empir.bib
+++ b/pkg/gmm/vignettes/empir.bib
@@ -21,11 +21,9 @@
 
 @book{nolan09,
 author = {J. P. Nolan},
-title = {Stable Distributions - Models for Heavy Tailed Data},
-year = {2010},
-publisher = {Birkh\"auser},
-address = {},
-note = {In progress, Chapter 1 online at academic2.american.edu/$\sim$jpnolan}
+title = {Univariate Stable Distributions - Models for Heavy Tailed Data},
+year = {2020},
+publisher = {Springer Series in Operations Research and Financial Engineering}
 } 
 
  @Manual{timeDate,
