changed encoding to utf8
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@201 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm/vignettes/gmm_with_R.rnw
+++ b/pkg/gmm/vignettes/gmm_with_R.rnw
@@ -5,7 +5,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{col}{Corollary}
 \newtheorem{lem}{Lemma}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 \newtheorem{ass}{Assumption}
 \usepackage{amsmath}
 \usepackage{verbatim}
